# Non-Profit-Islamic

./: README.md  pyproject.toml
.github/workflows/: ci.yml
non_profit_mas/: custom_login.py  hooks.py  modules.txt
non_profit_mas/api/: salary_slip.py  upcoming_events.py
non_profit_mas/hooks/: post_login.py
non_profit_mas/non_profit_mas/doctype/donation_collection/: donation_collection.js  donation_collection.json  donation_collection.py  test_donation_collection.py
non_profit_mas/non_profit_mas/doctype/donation_ct/: donation_ct.json  donation_ct.py
non_profit_mas/non_profit_mas/doctype/donation_type/: donation_type.js  donation_type.json  donation_type.py  test_donation_type.py
non_profit_mas/non_profit_mas/doctype/donor_profile/: donor_profile.js  donor_profile.json  donor_profile.py  test_donor_profile.py
non_profit_mas/non_profit_mas/doctype/type_of_collection/: test_type_of_collection.py  type_of_collection.js  type_of_collection.json  type_of_collection.py
non_profit_mas/public/css/: login.css  sidebar.css
non_profit_mas/public/js/: buying_dashboard_extension.js  custom_pos.js  sidebar.js
non_profit_mas/templates/includes/: login.css  sidebar.html
non_profit_mas/utils/: company.py  login.py
non_profit_mas/www/: login.html  select-company.html
non_profit_mas/www/company_selection/: index.html
